.provarCaches/00Df2000001KKNJEA4/objects/Incap311__X311_Asyn_Function__mdt.object
<CustomObject>
    <description>For Async upsert and transfer of service request</description>
    <fields>
        <fullName>Incap311__Description__c</fullName>
        <label>Description</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to enable or disable the associated feature</description>
        <label>Deleted Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>311_Asyn_Function</label>
    <pluralLabel>311_Asyn_Functions</pluralLabel>
</CustomObject>